--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "paragonie/random_compat": "2.*",
+        "pusher/pusher-php-server": "^7.2",
         "srmklive/paypal": "^3.0",
         "staudenmeir/eloquent-json-relations": "^1.8",
         "twilio/sdk": "^7.15",
